@@ -218,7 +218,6 @@
   <block id="2bc897b30b2df26c531635a145af68ae" category="list-text">Se non è presente alcun ruolo IAM nell'account, fare clic su *credenziali* e seguire la procedura guidata per aggiungere un ARN per un ruolo AWS IAM con FSX per le credenziali ONTAP. Vedere <block ref="1bf7f389ad2ba65976eab24c818e174c" category="inline-link-macro-rx"></block> per ulteriori informazioni.</block>
   <block id="acffd96d264a8bd18e75d6d6ce0aac12" category="list-text">*Dettagli e credenziali*</block>
   <block id="620a619e5abf90904f8bd9148673563f" category="list-text">Inserire il nome dell'ambiente di lavoro che si desidera utilizzare.</block>
-  <block id="217b3256c0d162e3d3a19443f01ca898" category="list-text">In alternativa, è possibile creare tag per categorizzare l'ambiente di lavoro facendo clic sul segno più e immettendo il nome e il valore di un tag.</block>
   <block id="be5962a1bf7a843353b57734848a4297" category="list-text">Inserire e confermare la password del cluster ONTAP che si desidera utilizzare.</block>
   <block id="b3decd3dc6245a45a816d81cc94eb4be" category="list-text">Se si desidera, deselezionare l'opzione per utilizzare la stessa password per l'utente SVM e impostare una password diversa.</block>
   <block id="abe6a897030218d3203ab879ad4b1f44" category="list-text">*Modello di implementazione ha*</block>
@@ -377,8 +376,6 @@
   <block id="7862905bf13e1d709d0da68a16f6b48a" category="list-text">Il campo Storage VM (SVM) popola automaticamente la SVM in base al nome dell'ambiente di lavoro.</block>
   <block id="09d72555d9ef793670cfd52c3b29a5a9" category="list-text">Inserire le dimensioni del volume e selezionare un'unità (GIB o TIB). Si noti che le dimensioni del volume aumentano con l'utilizzo.</block>
   <block id="67cab8c7d29423fd822eaba3b1d1ad3e" category="list-text">Selezionare un criterio di snapshot. Per impostazione predefinita, viene eseguita una snapshot ogni ora (mantenendo le ultime sei copie), ogni giorno (mantenendo le ultime due copie) e ogni settimana (mantenendo le ultime due copie).</block>
-  <block id="bf3b5a85e403c1246dbbd111a2122f1b" category="list-text">In alternativa, è possibile creare tag per classificare i volumi facendo clic sul segno più e immettendo il nome e il valore di un tag.</block>
-  <block id="0e71045ffb2c142e38f192348939d657" category="list-text">*Volume Protocol*:</block>
   <block id="763a3be303d8f075b28b4fb47257840f" category="list-text">Selezionare un protocollo di volume NFS, CIFS o iSCSI.</block>
   <block id="1d1a594959ec615f56516f5d0f5e8ddb" category="open-title">NFS</block>
   <block id="2f13041935e5c3174ee293d608dc78fb" category="list-text">Selezionare un criterio di controllo degli accessi.</block>
@@ -719,7 +716,6 @@
   <block id="4a0c58afa0cf8e6e215c2321f73e0970" category="paragraph">Per problemi di supporto tecnico relativi a soluzioni e servizi di storage BlueXP o BlueXP, è possibile aprire un ticket di supporto NetApp utilizzando il numero di serie a livello di account BlueXP. È necessario <block ref="0c02d88e10dc9d33a3c6d90fb8336a90" category="inline-link-macro-rx"></block> per attivare il supporto.</block>
   <block id="52f0d52ceec121b410112b2a5dba2d7a" category="paragraph">Utilizzo di <block ref="22fc26cf6eb0c7b721364c48d2d0a99b" category="inline-link-macro-rx"></block>, Puoi iniziare a utilizzare FSX per ONTAP in pochi passaggi.</block>
   <block id="c252661fa67fb818de00d332271e5952" category="paragraph">È necessario disporre di un<block ref="752bdc7b6cc8b206a39bceaddedfafff" category="inline-link-rx"></block> Per aprire l'ambiente di lavoro FSX per ONTAP, creare volumi o eseguire altre azioni. Quando è necessario un connettore, BlueXP chiede se non è già attivo.</block>
-  <block id="f8073e9488e1efc9a72bfd8549bdfe65" category="paragraph">Lasciare vuoto _CIDR Range_ per impostare automaticamente un intervallo disponibile. In alternativa, è possibile utilizzare<block ref="908a038b6698bef05553dc237966486c" category="inline-link-rx"></block> per configurare manualmente un intervallo.</block>
   <block id="fed3b58ee53350fc679af9313a452f78" category="paragraph">Accettare la chiave master AWS predefinita o fare clic su *Change Key* (Cambia chiave) per selezionare una diversa chiave master cliente AWS (CMK). Per ulteriori informazioni su CMK, vedere <block ref="8fe12519351ca8a607a9a9e011c48c01" category="inline-link-macro-rx"></block>.</block>
   <block id="598ac5ec4509a5fa7d37ccc4259276e2" category="paragraph">È possibile replicare i dati tra ambienti di storage utilizzando BlueXP. Per configurare FSX per la replica ONTAP, vedere<block ref="b3f9ef9ab8e2f6f80ef424579ec0a2be" category="inline-link-rx"></block>.</block>
   <block id="4fe2848eb7d4a0d2def783dfbceaf41d" category="paragraph">È possibile creare relazioni di sincronizzazione utilizzando la copia e la sincronizzazione BlueXP. Per configurare le relazioni di sincronizzazione, vedere<block ref="ebda92a6c5428de5c74cf0458cae3b5e" category="inline-link-rx"></block>.</block>
@@ -746,4 +742,24 @@
   <block id="9392a234f812a64a7add82bf3ea440ce" category="paragraph"><block ref="6c403399a6912b636ecf2c35a037d6c1" category="inline-link-macro-rx"></block>.</block>
   <block id="6bc0d0afbcf301d393b1808f854ff30e" category="list-text"><block ref="6bc0d0afbcf301d393b1808f854ff30e" category="inline-link-rx"></block></block>
   <block id="8fb5f344898fe922856ca069cb615707" category="list-text"><block ref="8fb5f344898fe922856ca069cb615707" category="inline-link-rx"></block></block>
+  <block id="c6e3378b0ee3c7cdb21a4cfdf78d729e" category="list-text">Se si desidera, creare tag per classificare i volumi facendo clic sul segno più e immettendo il nome e il valore di un tag.</block>
+  <block id="ee7de532c8affb3659d9d80ec396fef5" category="list-text">Facoltativamente, selezionare l'opzione di ottimizzazione per creare un FlexGroup e distribuire i dati del volume nel cluster.</block>
+  <block id="cb7d4e165ee98c4ee16be7a24245f5bc" category="admonition">La distribuzione FlexGroup è disponibile solo per i protocolli di volume NFS e CIFS.</block>
+  <block id="176d707d91233fad58f8673c1716a4f8" category="list-text">*Protocollo volumi*:</block>
+  <block id="21f43446afbc4a1acbf88a421b7a09dc" category="list-text">Se si seleziona Optimization (FlexGroup) (ottimizzazione), è necessario specificare il numero di componenti in cui distribuire i dati del volume. Si consiglia vivamente di utilizzare un numero pari di componenti per garantire una distribuzione uniforme dei dati.</block>
+  <block id="d99cba7d7f71be21b06a8ed7b3cead82" category="list-text">In alternativa, è possibile creare tag facendo clic sul segno più e immettendo il nome e il valore di un tag.</block>
+  <block id="c89439eb771335b64cacafd62be867f6" category="list-text">Se si desidera, è possibile specificare l'ora di inizio per Amazon FSX for NetApp ONTAP per eseguire la manutenzione settimanale di 30 minuti. Questo può essere utilizzato per garantire che la manutenzione non coincida con le attività aziendali critiche. Se si seleziona *Nessuna preferenza*, viene assegnato un orario di inizio casuale. È possibile modificarlo in qualsiasi momento.</block>
+  <block id="5b1a0e567c07875980cb98cbf8a0fc60" category="paragraph">Lasciare vuoto _CIDR Range_ per impostare automaticamente un intervallo disponibile. In alternativa, è possibile utilizzare<block ref="ca64804883d6ae6ee4c5f1f5610fe766" category="inline-link-rx"></block> per configurare manualmente un intervallo.</block>
+  <block id="deafe98ece55cac6734aa3e0c94f89a1" category="list-title">Gli IPS nei seguenti intervalli non sono supportati:</block>
+  <block id="41744fea4be9d62829f8c470c2392ab1" category="list-text">0.0.0.0/8</block>
+  <block id="3e1fea8090ae1db8846841cc09d5aaf8" category="list-text">127.0.0.0/8</block>
+  <block id="848f6e8ee6fe43588f4416e654c34e48" category="list-text">198.19.0.0/20</block>
+  <block id="db9ba505138d8297c77f1ab14b6cdeec" category="list-text">224.0.0.0/4</block>
+  <block id="f4e8000f5b4b5143e798df0d90374b2a" category="list-text">240.0.0.0/4</block>
+  <block id="8ebeed61b9e364961ed847275d3138d4" category="list-text">255.255.255.255/32</block>
+  <block id="a6aef5e3bbd8b059764f33a4044e30d6" category="section-title">04 giugno 2023</block>
+  <block id="b11363dc7ad08609dacf71adabc1e3d7" category="inline-link-macro">creazione di un ambiente di lavoro</block>
+  <block id="c21d5cf174dc36531d6990b13fe89573" category="list-text">Quando <block ref="ad9408e39808bf9ea4b07fa95cac5798" category="inline-link-macro-rx"></block>, è possibile specificare l'ora di inizio della finestra di manutenzione settimanale di 30 minuti per garantire che la manutenzione non sia in conflitto con le attività aziendali critiche.</block>
+  <block id="e2ba73f0e5661996e4350de09efee512" category="inline-link-macro">creazione di un volume</block>
+  <block id="fabdf5de30f7e7084ae6656930904d1d" category="list-text">Quando <block ref="1bfb452ce23fdd4301ee99a62317a7a6" category="inline-link-macro-rx"></block>, È possibile abilitare l'ottimizzazione dei dati creando un FlexGroup per distribuire i dati tra i volumi.</block>
 </blocks>
